Authorization denied Exception makes 100+ test failing